--- a/db.bib
+++ b/db.bib
@@ -1963,6 +1963,18 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{lebret-collobert:2014:EACL,
+ address = {Gothenburg, Sweden},
+ author = {Lebret, R\'{e}mi  and  Collobert, Ronan},
+ booktitle = {Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics},
+ link = {http://www.aclweb.org/anthology/E14-1051},
+ month = {April},
+ pages = {482--490},
+ publisher = {Association for Computational Linguistics},
+ title = {Word Embeddings through Hellinger PCA},
+ year = {2014}
+}
+
 @inproceedings{lee-he-zettlemoyer:2018:N18-2,
  abstract = {We introduce a fully-differentiable approximation to higher-order inference for coreference resolution. Our approach uses the antecedent distribution from a span-ranking architecture as an attention mechanism to iteratively refine span representations. This enables the model to softly consider multiple hops in the predicted clusters. To alleviate the computational cost of this iterative process, we introduce a coarse-to-fine approach that incorporates a less accurate but more efficient bilinear factor, enabling more aggressive pruning without hurting accuracy. Compared to the existing state-of-the-art span-ranking approach, our model significantly improves accuracy on the English OntoNotes benchmark, while being far more computationally efficient.},
  address = {New Orleans, Louisiana},
