--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2164,6 +2164,17 @@ and Zettlemoyer, Luke},
  year = {2013}
 }
 
+@incollection{NIPS2014_5477,
+ author = {Levy, Omer and Goldberg, Yoav},
+ booktitle = {Advances in Neural Information Processing Systems 27},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+ link = {http://papers.nips.cc/paper/5477-neural-word-embedding-as-implicit-matrix-factorization.pdf},
+ pages = {2177--2185},
+ publisher = {Curran Associates, Inc.},
+ title = {Neural Word Embedding as Implicit Matrix Factorization},
+ year = {2014}
+}
+
 @incollection{NIPS2014_5484,
  author = {Ba, Jimmy and Caruana, Rich},
  booktitle = {Advances in Neural Information Processing Systems 27},
