--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1885,6 +1885,15 @@ and Zettlemoyer, Luke},
  year = {2014}
 }
 
+@incollection{NIPS2014_5477,
+ author = {Levy, Omer and Goldberg, Yoav},
+ booktitle = {NIPS 27},
+ link = {http://papers.nips.cc/paper/5477-neural-word-embedding-as-implicit-matrix-factorization.pdf},
+ pages = {2177--2185},
+ title = {Neural Word Embedding as Implicit Matrix Factorization},
+ year = {2014}
+}
+
 @incollection{NIPS2014_5484,
  author = {Ba, Jimmy and Caruana, Rich},
  booktitle = {NIPS 27},
