--- a/shortdb.bib
+++ b/shortdb.bib
@@ -193,6 +193,22 @@ POS tags and dependency trees, improves the results further.},
  year = {2011}
 }
 
+@article{Bengio:2003:NPL:944919.944966,
+ acmid = {944966},
+ author = {Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Janvin, Christian},
+ issn = {1532-4435},
+ issue_date = {3/1/2003},
+ journal = {J. Mach. Learn. Res.},
+ link = {http://dl.acm.org/citation.cfm?id=944919.944966},
+ month = {mar},
+ numpages = {19},
+ pages = {1137--1155},
+ publisher = {JMLR.org},
+ title = {A Neural Probabilistic Language Model},
+ volume = {3},
+ year = {2003}
+}
+
 @inproceedings{bentz-EtAl:2016:CL4LC,
  abstract = {Language complexity is an intriguing phenomenon argued to play an important
 role in both language learning and processing. The need to compare languages
