--- a/db.bib
+++ b/db.bib
@@ -2199,6 +2199,17 @@ of graph-to-sequence conversions.},
  year = {2011}
 }
 
+@article{lund1996producing,
+ author = {Lund, Kevin and Burgess, Curt},
+ journal = {Behavior research methods, instruments, \& computers},
+ number = {2},
+ pages = {203--208},
+ publisher = {Springer},
+ title = {Producing high-dimensional semantic spaces from lexical co-occurrence},
+ volume = {28},
+ year = {1996}
+}
+
 @inproceedings{luong-pham-manning:2015:EMNLP,
  address = {Lisbon, Portugal},
  author = {Luong, Thang  and  Pham, Hieu  and  Manning, Christopher D.},
