--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2580,6 +2580,15 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2010}
 }
 
+@article{Rohde06animproved,
+ author = {Douglas L. T. Rohde and Laura M. Gonnerman and David C. Plaut},
+ journal = {COMMUNICATIONS OF THE ACM},
+ pages = {627--633},
+ title = {An improved model of semantic similarity based on lexical co-occurence},
+ volume = {8},
+ year = {2006}
+}
+
 @inproceedings{rush-EtAl:2010:EMNLP,
  author = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
  booktitle = {Proc. of ACL-2010},
