--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2262,6 +2262,15 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2011}
 }
 
+@article{Rohde06animproved,
+ author = {Douglas L. T. Rohde and Laura M. Gonnerman and David C. Plaut},
+ journal = {COMMUNICATIONS OF THE ACM},
+ pages = {627--633},
+ title = {An improved model of semantic similarity based on lexical co-occurence},
+ volume = {8},
+ year = {2006}
+}
+
 @inproceedings{rush-EtAl:2010:EMNLP,
  author = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
  booktitle = {Proc. of ACL},
