--- a/db.bib
+++ b/db.bib
@@ -2444,6 +2444,17 @@ and Zettlemoyer, Luke},
  year = {2008}
 }
 
+@incollection{NIPS2000_1839,
+ author = {Bengio, Yoshua and R\'{e}jean Ducharme and Vincent, Pascal},
+ booktitle = {Advances in Neural Information Processing Systems 13},
+ editor = {T. K. Leen and T. G. Dietterich and V. Tresp},
+ link = {http://papers.nips.cc/paper/1839-a-neural-probabilistic-language-model.pdf},
+ pages = {932--938},
+ publisher = {MIT Press},
+ title = {A Neural Probabilistic Language Model},
+ year = {2001}
+}
+
 @incollection{NIPS2001_2089,
  author = {Michael Collins and Nigel Duffy},
  booktitle = {Advances in Neural Information Processing Systems 14},
