--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1889,6 +1889,15 @@ and Zettlemoyer, Luke},
  year = {2008}
 }
 
+@incollection{NIPS2000_1839,
+ author = {Bengio, Yoshua and R\'{e}jean Ducharme and Vincent, Pascal},
+ booktitle = {NIPS 13},
+ link = {http://papers.nips.cc/paper/1839-a-neural-probabilistic-language-model.pdf},
+ pages = {932--938},
+ title = {A Neural Probabilistic Language Model},
+ year = {2001}
+}
+
 @incollection{NIPS2001_2089,
  author = {Michael Collins and Nigel Duffy},
  booktitle = {NIPS},
