--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2180,6 +2180,17 @@ and Zettlemoyer, Luke},
  year = {2004}
 }
 
+@incollection{NIPS2008_3583,
+ author = {Mnih, Andriy and Hinton, Geoffrey E},
+ booktitle = {Advances in Neural Information Processing Systems 21},
+ editor = {D. Koller and D. Schuurmans and Y. Bengio and L. Bottou},
+ link = {http://papers.nips.cc/paper/3583-a-scalable-hierarchical-distributed-language-model.pdf},
+ pages = {1081--1088},
+ publisher = {Curran Associates, Inc.},
+ title = {A Scalable Hierarchical Distributed Language Model},
+ year = {2009}
+}
+
 @incollection{NIPS2012_4824,
  author = {Alex Krizhevsky and Sutskever, Ilya and Geoffrey E. Hinton},
  booktitle = {Advances in Neural Information Processing Systems 25},
