--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1912,6 +1912,15 @@ and Zettlemoyer, Luke},
  year = {2004}
 }
 
+@incollection{NIPS2008_3583,
+ author = {Mnih, Andriy and Hinton, Geoffrey E},
+ booktitle = {NIPS 21},
+ link = {http://papers.nips.cc/paper/3583-a-scalable-hierarchical-distributed-language-model.pdf},
+ pages = {1081--1088},
+ title = {A Scalable Hierarchical Distributed Language Model},
+ year = {2009}
+}
+
 @incollection{NIPS2014_5346,
  author = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
  booktitle = {NIPS 27},
