--- a/db.bib
+++ b/db.bib
@@ -740,6 +740,24 @@ Processing},
  year = {1967}
 }
 
+@inproceedings{DBLP:conf/interspeech/MikolovKBCK10,
+ author = {Tomas Mikolov and
+Martin Karafi{\'{a}}t and
+Luk{\'{a}}s Burget and
+Jan Cernock{\'{y}} and
+Sanjeev Khudanpur},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/conf/interspeech/MikolovKBCK10},
+ booktitle = {{INTERSPEECH} 2010, 11th Annual Conference of the International Speech
+Communication Association, Makuhari, Chiba, Japan, September 26-30, 2010},
+ crossref = {DBLP:conf/interspeech/2010},
+ link = {http://www.isca-speech.org/archive/interspeech\_2010/i10\_1045.html},
+ pages = {1045--1048},
+ timestamp = {Thu, 24 Aug 2017 11:26:53 +0200},
+ title = {Recurrent neural network based language model},
+ year = {2010}
+}
+
 @inproceedings{DBLP:conf/uai/ZettlemoyerC05,
  author = {Luke S. Zettlemoyer and
 Michael Collins},
