--- a/db.bib
+++ b/db.bib
@@ -2390,6 +2390,18 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2006}
 }
 
+@inproceedings{melamud-goldberger-dagan:2016:CoNLL,
+ address = {Berlin, Germany},
+ author = {Melamud, Oren  and  Goldberger, Jacob  and  Dagan, Ido},
+ booktitle = {Proceedings of The 20th SIGNLL Conference on Computational Natural Language Learning},
+ link = {http://www.aclweb.org/anthology/K16-1006},
+ month = {August},
+ pages = {51--61},
+ publisher = {Association for Computational Linguistics},
+ title = {context2vec: Learning Generic Context Embedding with Bidirectional LSTM},
+ year = {2016}
+}
+
 @inproceedings{moore:2004:ACL,
  address = {Barcelona, Spain},
  author = {Moore, Robert C.},
