--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2082,6 +2082,15 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2006}
 }
 
+@inproceedings{melamud-goldberger-dagan:2016:CoNLL,
+ author = {Melamud, Oren  and  Goldberger, Jacob  and  Dagan, Ido},
+ booktitle = {Proc. of CoNLL-2016},
+ link = {http://www.aclweb.org/anthology/K16-1006},
+ publisher = {ACL},
+ title = {context2vec: Learning Generic Context Embedding with Bidirectional LSTM},
+ year = {2016}
+}
+
 @article{mnih2015human,
  author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
  journal = {Nature},
