--- a/db.bib
+++ b/db.bib
@@ -2402,6 +2402,23 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2016}
 }
 
+@inproceedings{Mnih:2007:TNG:1273496.1273577,
+ acmid = {1273577},
+ address = {New York, NY, USA},
+ author = {Mnih, Andriy and Hinton, Geoffrey},
+ booktitle = {Proceedings of the 24th International Conference on Machine Learning},
+ doi = {10.1145/1273496.1273577},
+ isbn = {978-1-59593-793-3},
+ link = {http://doi.acm.org/10.1145/1273496.1273577},
+ location = {Corvalis, Oregon, USA},
+ numpages = {8},
+ pages = {641--648},
+ publisher = {ACM},
+ series = {ICML '07},
+ title = {Three New Graphical Models for Statistical Language Modelling},
+ year = {2007}
+}
+
 @inproceedings{moore:2004:ACL,
  address = {Barcelona, Spain},
  author = {Moore, Robert C.},
