--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2102,6 +2102,21 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2015}
 }
 
+@inproceedings{Mnih:2007:TNG:1273496.1273577,
+ acmid = {1273577},
+ author = {Mnih, Andriy and Hinton, Geoffrey},
+ booktitle = {Proc. of ICML '07},
+ doi = {10.1145/1273496.1273577},
+ isbn = {978-1-59593-793-3},
+ link = {http://doi.acm.org/10.1145/1273496.1273577},
+ location = {Corvalis, Oregon, USA},
+ numpages = {8},
+ publisher = {ACM},
+ series = {ICML '07},
+ title = {Three New Graphical Models for Statistical Language Modelling},
+ year = {2007}
+}
+
 @inproceedings{moore:2004:ACL,
  author = {Moore, Robert C.},
  booktitle = {Proc. of ACL-2004},
