--- a/tinydb.bib
+++ b/tinydb.bib
@@ -20,6 +20,20 @@ and Clark, Peter E.},
  year = {2009}
 }
 
+@article{7478417,
+ author = {S. Lai and K. Liu and S. He and J. Zhao},
+ doi = {10.1109/MIS.2016.45},
+ issn = {1541-1672},
+ journal = {IEEE Intelligent Systems},
+ keyword = {learning (artificial intelligence);natural language processing;neural nets;neural network;word embedding;distributed word representation;Object recognition;Neural networks;Embedded systems;Distributed processing;Training;Analytical models;Semantics;word embedding;distributed representation;neural network;intelligent systems},
+ month = {Nov},
+ number = {6},
+ pages = {5-14},
+ title = {How to Generate a Good Word Embedding},
+ volume = {31},
+ year = {2016}
+}
+
 @incollection{Agarwal2005,
  author = {Agarwal, Shivani and Roth, Dan},
  booktitle = {Learning Theory},
