--- a/db.bib
+++ b/db.bib
@@ -3820,6 +3820,18 @@ of the art on various datasets.},
  year = {2012}
 }
 
+@inproceedings{yin-schutze:2016:P16-1,
+ address = {Berlin, Germany},
+ author = {Yin, Wenpeng  and  Sch\"{u}tze, Hinrich},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ link = {http://www.aclweb.org/anthology/P16-1128},
+ month = {August},
+ pages = {1351--1360},
+ publisher = {Association for Computational Linguistics},
+ title = {Learning Word Meta-Embeddings},
+ year = {2016}
+}
+
 @techreport{Yu:2001:PNM,
  author = {Yu, Shiwen and Lu, Jianming and Zhu, Xuefeng and Duan, Huiming and Kang, Shiyong and Sun, Honglin and Wang, Hui and Zhao, Qiang and Zhan, Weidong},
  title = {Processing norms of modern chinese corpus},
