--- a/shortdb.bib
+++ b/shortdb.bib
@@ -3367,6 +3367,15 @@ and Dayan, Peter},
  year = {2012}
 }
 
+@inproceedings{yin-schutze:2016:P16-1,
+ author = {Yin, Wenpeng  and  Sch\"{u}tze, Hinrich},
+ booktitle = {Proc. of ACL-2016},
+ link = {http://www.aclweb.org/anthology/P16-1128},
+ publisher = {ACL},
+ title = {Learning Word Meta-Embeddings},
+ year = {2016}
+}
+
 @techreport{Yu:2001:PNM,
  author = {Yu, Shiwen and Lu, Jianming and Zhu, Xuefeng and Duan, Huiming and Kang, Shiyong and Sun, Honglin and Wang, Hui and Zhao, Qiang and Zhan, Weidong},
  title = {Processing norms of modern chinese corpus},
