--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2926,6 +2926,14 @@ and Dayan, Peter},
  year = {2012}
 }
 
+@inproceedings{yin-schutze:2016:P16-1,
+ author = {Yin, Wenpeng  and  Sch\"{u}tze, Hinrich},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P16-1128},
+ title = {Learning Word Meta-Embeddings},
+ year = {2016}
+}
+
 @techreport{Yu:2001:PNM,
  author = {Yu, Shiwen and Lu, Jianming and Zhu, Xuefeng and Duan, Huiming and Kang, Shiyong and Sun, Honglin and Wang, Hui and Zhao, Qiang and Zhan, Weidong},
  title = {Processing norms of modern chinese corpus},
