--- a/db.bib
+++ b/db.bib
@@ -3036,6 +3036,18 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2006}
 }
 
+@inproceedings{rothe-schutze:2015:ACL-IJCNLP,
+ address = {Beijing, China},
+ author = {Rothe, Sascha  and  Sch\"{u}tze, Hinrich},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+ link = {http://www.aclweb.org/anthology/P15-1173},
+ month = {July},
+ pages = {1793--1803},
+ publisher = {Association for Computational Linguistics},
+ title = {AutoExtend: Extending Word Embeddings to Embeddings for Synsets and Lexemes},
+ year = {2015}
+}
+
 @inproceedings{rush-EtAl:2010:EMNLP,
  address = {Cambridge, MA},
  author = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
