--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2666,6 +2666,15 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2006}
 }
 
+@inproceedings{rothe-schutze:2015:ACL-IJCNLP,
+ author = {Rothe, Sascha  and  Sch\"{u}tze, Hinrich},
+ booktitle = {Proc. of IJCNLP-2015},
+ link = {http://www.aclweb.org/anthology/P15-1173},
+ publisher = {ACL},
+ title = {AutoExtend: Extending Word Embeddings to Embeddings for Synsets and Lexemes},
+ year = {2015}
+}
+
 @inproceedings{rush-EtAl:2010:EMNLP,
  author = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
  booktitle = {Proc. of ACL-2010},
