--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2341,6 +2341,14 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2006}
 }
 
+@inproceedings{rothe-schutze:2015:ACL-IJCNLP,
+ author = {Rothe, Sascha  and  Sch\"{u}tze, Hinrich},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1173},
+ title = {AutoExtend: Extending Word Embeddings to Embeddings for Synsets and Lexemes},
+ year = {2015}
+}
+
 @inproceedings{rush-EtAl:2010:EMNLP,
  author = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
  booktitle = {Proc. of ACL},
