--- a/db.bib
+++ b/db.bib
@@ -1255,6 +1255,18 @@ An Exploration},
  year = {2011}
 }
 
+@inproceedings{faruqui-EtAl:2016:RepEval,
+ address = {Berlin, Germany},
+ author = {Faruqui, Manaal  and  Tsvetkov, Yulia  and  Rastogi, Pushpendre  and  Dyer, Chris},
+ booktitle = {Proceedings of the 1st Workshop on Evaluating Vector-Space Representations for NLP},
+ link = {http://anthology.aclweb.org/W16-2506},
+ month = {August},
+ pages = {30--35},
+ publisher = {Association for Computational Linguistics},
+ title = {Problems With Evaluation of Word Embeddings Using Word Similarity Tasks},
+ year = {2016}
+}
+
 @inproceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
  address = {Jeju Island, Korea},
  author = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
