--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1014,6 +1014,14 @@ An Exploration},
  year = {2010}
 }
 
+@inproceedings{faruqui-EtAl:2016:RepEval,
+ author = {Faruqui, Manaal  and  Tsvetkov, Yulia  and  Rastogi, Pushpendre  and  Dyer, Chris},
+ booktitle = {Proc. of the 1st Workshop on Evaluating Vector-Space Representations for NLP},
+ link = {http://anthology.aclweb.org/W16-2506},
+ title = {Problems With Evaluation of Word Embeddings Using Word Similarity Tasks},
+ year = {2016}
+}
+
 @inproceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
  author = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
  booktitle = {Proc. of EMNLP},
