--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2321,6 +2321,17 @@ and Zettlemoyer, Luke},
  year = {2016}
 }
 
+@incollection{NIPS2017_7209,
+ author = {McCann, Bryan and Bradbury, James and Xiong, Caiming and Socher, Richard},
+ booktitle = {Advances in Neural Information Processing Systems 30},
+ editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ link = {http://papers.nips.cc/paper/7209-learned-in-translation-contextualized-word-vectors.pdf},
+ pages = {6294--6305},
+ publisher = {Curran Associates, Inc.},
+ title = {Learned in Translation: Contextualized Word Vectors},
+ year = {2017}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
  booktitle = {Proc. of CoNLL-2006},
