--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2026,6 +2026,15 @@ and Zettlemoyer, Luke},
  year = {2016}
 }
 
+@incollection{NIPS2017_7209,
+ author = {McCann, Bryan and Bradbury, James and Xiong, Caiming and Socher, Richard},
+ booktitle = {NIPS 30},
+ link = {http://papers.nips.cc/paper/7209-learned-in-translation-contextualized-word-vectors.pdf},
+ pages = {6294--6305},
+ title = {Learned in Translation: Contextualized Word Vectors},
+ year = {2017}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
  booktitle = {Proc. of CoNLL},
