--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2566,6 +2566,15 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2014}
 }
 
+@inproceedings{peters-EtAl:2018:EMNLP,
+ author = {Peters, Matthew  and  Neumann, Mark  and  Zettlemoyer, Luke  and  Yih, Wen-tau},
+ booktitle = {Proc. of EMNLP-2018},
+ link = {http://www.aclweb.org/anthology/D18-1179},
+ publisher = {ACL},
+ title = {Dissecting Contextual Word Embeddings: Architecture and Representation},
+ year = {2018}
+}
+
 @inproceedings{PETROV12.274.L12-1115,
  author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
  booktitle = {Proc. of LREC-2012},
