--- a/db.bib
+++ b/db.bib
@@ -2915,6 +2915,18 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2014}
 }
 
+@inproceedings{peters-EtAl:2018:EMNLP,
+ address = {Brussels, Belgium},
+ author = {Peters, Matthew  and  Neumann, Mark  and  Zettlemoyer, Luke  and  Yih, Wen-tau},
+ booktitle = {Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing},
+ link = {http://www.aclweb.org/anthology/D18-1179},
+ month = {October-November},
+ pages = {1499--1509},
+ publisher = {Association for Computational Linguistics},
+ title = {Dissecting Contextual Word Embeddings: Architecture and Representation},
+ year = {2018}
+}
+
 @inproceedings{PETROV12.274.L12-1115,
  address = {Istanbul, Turkey},
  author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
