--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2231,6 +2231,14 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2014}
 }
 
+@inproceedings{peters-EtAl:2018:EMNLP,
+ author = {Peters, Matthew  and  Neumann, Mark  and  Zettlemoyer, Luke  and  Yih, Wen-tau},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D18-1179},
+ title = {Dissecting Contextual Word Embeddings: Architecture and Representation},
+ year = {2018}
+}
+
 @inproceedings{PETROV12.274,
  author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
  booktitle = {Proc. of LREC},
