--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2575,6 +2575,16 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2018}
 }
 
+@inproceedings{peters-EtAl:2018:N18-1,
+ abstract = {We introduce a new type of deep contextualized word representation that models both (1) complex characteristics of word use (e.g., syntax and semantics), and (2) how these uses vary across linguistic contexts (i.e., to model polysemy). Our word vectors are learned functions of the internal states of a deep bidirectional language model (biLM), which is pre-trained on a large text corpus. We show that these representations can be easily added to existing models and significantly improve the state of the art across six challenging NLP problems, including question answering, textual entailment and sentiment analysis. We also present an analysis showing that exposing the deep internals of the pre-trained network is crucial, allowing downstream models to mix different types of semi-supervision signals.},
+ author = {Peters, Matthew  and  Neumann, Mark  and  Iyyer, Mohit  and  Gardner, Matt  and  Clark, Christopher  and  Lee, Kenton  and  Zettlemoyer, Luke},
+ booktitle = {Proc. of NAACL-2018},
+ link = {http://www.aclweb.org/anthology/N18-1202},
+ publisher = {ACL},
+ title = {Deep Contextualized Word Representations},
+ year = {2018}
+}
+
 @inproceedings{PETROV12.274.L12-1115,
  author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
  booktitle = {Proc. of LREC-2012},
