--- a/tinydb.bib
+++ b/tinydb.bib
@@ -916,6 +916,15 @@ the official test run, which improved to 70.49 after bug fixes. We obtained the
  year = {2013}
 }
 
+@misc{devlin2018bert,
+ archiveprefix = {arXiv},
+ author = {Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+ eprint = {1810.04805},
+ primaryclass = {cs.CL},
+ title = {BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+ year = {2018}
+}
+
 @article{Dietterich2000,
  abstract = {Bagging and boosting are methods that generate a diverse ensemble of classifiers by manipulating the training data given to a ``base'' learning algorithm. Breiman has pointed out that they rely for their effectiveness on the instability of the base learning algorithm. An alternative approach to generating an ensemble is to randomize the internal decisions made by the base algorithm. This general approach has been studied previously by Ali and Pazzani and by Dietterich and Kong. This paper compares the effectiveness of randomization, bagging, and boosting for improving the performance of the decision-tree algorithm C4.5. The experiments show that in situations with little or no classification noise, randomization is competitive with (and perhaps slightly superior to) bagging but not as accurate as boosting. In situations with substantial classification noise, bagging is much better than boosting, and sometimes better than randomization.},
  author = {Dietterich, Thomas G.},
