--- a/db.bib
+++ b/db.bib
@@ -1137,6 +1137,15 @@ the official test run, which improved to 70.49 after bug fixes. We obtained the
  year = {2017}
 }
 
+@misc{devlin2018bert,
+ archiveprefix = {arXiv},
+ author = {Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+ eprint = {1810.04805},
+ primaryclass = {cs.CL},
+ title = {BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+ year = {2018}
+}
+
 @article{doi:10.1002/aris.1440380105,
  author = {Dumais, Susan T.},
  doi = {10.1002/aris.1440380105},
