--- a/db.bib
+++ b/db.bib
@@ -898,6 +898,24 @@ Wen{-}tau Yih},
  year = {2018}
 }
 
+@article{DBLP:journals/corr/abs-1810-04805,
+ archiveprefix = {arXiv},
+ author = {Jacob Devlin and
+Ming{-}Wei Chang and
+Kenton Lee and
+Kristina Toutanova},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1810-04805},
+ eprint = {1810.04805},
+ journal = {CoRR},
+ link = {http://arxiv.org/abs/1810.04805},
+ timestamp = {Tue, 30 Oct 2018 20:39:56 +0100},
+ title = {{BERT:} Pre-training of Deep Bidirectional Transformers for Language
+Understanding},
+ volume = {abs/1810.04805},
+ year = {2018}
+}
+
 @article{DBLP:journals/corr/BojanowskiGJM16,
  archiveprefix = {arXiv},
  author = {Piotr Bojanowski and
