--- a/db.bib
+++ b/db.bib
@@ -3527,6 +3527,16 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2014}
 }
 
+@inproceedings{TjongKimSang-DeMeulder:2003:CONLL,
+ author = {Tjong Kim Sang, Erik F.  and  De Meulder, Fien},
+ booktitle = {Proceedings of the Seventh Conference on Natural Language Learning at HLT-NAACL 2003},
+ editor = {Walter Daelemans and Miles Osborne},
+ link = {http://www.aclweb.org/anthology/W03-0419.pdf},
+ pages = {142--147},
+ title = {Introduction to the CoNLL-2003 Shared Task: Language-Independent Named Entity Recognition},
+ year = {2003}
+}
+
 @inproceedings{tse-curran:2010:PAPERS,
  address = {Beijing, China},
  author = {Tse, Daniel  and  Curran, James R.},
