--- a/shortdb.bib
+++ b/shortdb.bib
@@ -3091,6 +3091,15 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2014}
 }
 
+@inproceedings{TjongKimSang-DeMeulder:2003:CONLL,
+ author = {Tjong Kim Sang, Erik F.  and  De Meulder, Fien},
+ booktitle = {Proc. of the Seventh Conference on Natural Language Learning at HLT-NAACL 2003},
+ editor = {Walter Daelemans and Miles Osborne},
+ link = {http://www.aclweb.org/anthology/W03-0419.pdf},
+ title = {Introduction to the CoNLL-2003 Shared Task: Language-Independent Named Entity Recognition},
+ year = {2003}
+}
+
 @inproceedings{Toutanova:2003:FPT:1073445.1073478,
  acmid = {1073478},
  author = {Toutanova, Kristina and Klein, Dan and Manning, Christopher D. and Singer, Yoram},
