--- a/db.bib
+++ b/db.bib
@@ -2655,6 +2655,17 @@ and Zettlemoyer, Luke},
  year = {2016}
 }
 
+@incollection{NIPS2017_7181,
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ booktitle = {Advances in Neural Information Processing Systems 30},
+ editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ link = {http://papers.nips.cc/paper/7181-attention-is-all-you-need.pdf},
+ pages = {5998--6008},
+ publisher = {Curran Associates, Inc.},
+ title = {Attention is All you Need},
+ year = {2017}
+}
+
 @incollection{NIPS2017_7209,
  author = {McCann, Bryan and Bradbury, James and Xiong, Caiming and Socher, Richard},
  booktitle = {Advances in Neural Information Processing Systems 30},
