--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2053,6 +2053,15 @@ and Zettlemoyer, Luke},
  year = {2016}
 }
 
+@incollection{NIPS2017_7181,
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ booktitle = {NIPS 30},
+ link = {http://papers.nips.cc/paper/7181-attention-is-all-you-need.pdf},
+ pages = {5998--6008},
+ title = {Attention is All you Need},
+ year = {2017}
+}
+
 @incollection{NIPS2017_7209,
  author = {McCann, Bryan and Bradbury, James and Xiong, Caiming and Socher, Richard},
  booktitle = {NIPS 30},
