--- a/db.bib
+++ b/db.bib
@@ -1063,6 +1063,22 @@ inverted softmax},
  year = {2017}
 }
 
+@article{DBLP:journals/corr/SrivastavaGS15,
+ archiveprefix = {arXiv},
+ author = {Rupesh Kumar Srivastava and
+Klaus Greff and
+J{\"{u}}rgen Schmidhuber},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/SrivastavaGS15},
+ eprint = {1505.00387},
+ journal = {CoRR},
+ timestamp = {Mon, 13 Aug 2018 16:48:21 +0200},
+ title = {Highway Networks},
+ url = {http://arxiv.org/abs/1505.00387},
+ volume = {abs/1505.00387},
+ year = {2015}
+}
+
 @article{DBLP:journals/corr/ZarembaSV14,
  author = {Wojciech Zaremba and
 Ilya Sutskever and
