--- a/db.bib
+++ b/db.bib
@@ -2914,6 +2914,18 @@ and Satta, Giorgio},
  year = {2014}
 }
 
+@inproceedings{pei-ge-chang:2015:ACL-IJCNLP,
+ address = {Beijing, China},
+ author = {Pei, Wenzhe  and  Ge, Tao  and  Chang, Baobao},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+ month = {July},
+ pages = {313--322},
+ publisher = {Association for Computational Linguistics},
+ title = {An Effective Neural Network Model for Graph-based Dependency Parsing},
+ url = {http://www.aclweb.org/anthology/P15-1031},
+ year = {2015}
+}
+
 @inproceedings{peng-EtAl:2017:EACLlong1,
  abstract = {Neural attention models have achieved great success in different NLP tasks.
 How- ever, they have not fulfilled their promise on the AMR parsing task due to
