--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2577,6 +2577,15 @@ and Satta, Giorgio},
  year = {2014}
 }
 
+@inproceedings{pei-ge-chang:2015:ACL-IJCNLP,
+ author = {Pei, Wenzhe  and  Ge, Tao  and  Chang, Baobao},
+ booktitle = {Proc. of ACL-2015},
+ publisher = {ACL},
+ title = {An Effective Neural Network Model for Graph-based Dependency Parsing},
+ url = {http://www.aclweb.org/anthology/P15-1031},
+ year = {2015}
+}
+
 @inproceedings{peng-EtAl:2017:EACLlong1,
  abstract = {Neural attention models have achieved great success in different NLP tasks.
 How- ever, they have not fulfilled their promise on the AMR parsing task due to
