--- a/db.bib
+++ b/db.bib
@@ -754,6 +754,43 @@ Processing},
  year = {1967}
 }
 
+@proceedings{DBLP:conf/interspeech/2014,
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/conf/interspeech/2014},
+ editor = {Haizhou Li and
+Helen M. Meng and
+Bin Ma and
+Engsiong Chng and
+Lei Xie},
+ publisher = {{ISCA}},
+ timestamp = {Wed, 12 Sep 2018 16:38:51 +0200},
+ title = {{INTERSPEECH} 2014, 15th Annual Conference of the International Speech
+Communication Association, Singapore, September 14-18, 2014},
+ url = {http://www.isca-speech.org/archive/interspeech\_2014},
+ year = {2014}
+}
+
+@inproceedings{DBLP:conf/interspeech/ChelbaMSGBKR14,
+ author = {Ciprian Chelba and
+Tomas Mikolov and
+Mike Schuster and
+Qi Ge and
+Thorsten Brants and
+Phillipp Koehn and
+Tony Robinson},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/conf/interspeech/ChelbaMSGBKR14},
+ booktitle = {{INTERSPEECH} 2014, 15th Annual Conference of the International Speech
+Communication Association, Singapore, September 14-18, 2014},
+ crossref = {DBLP:conf/interspeech/2014},
+ pages = {2635--2639},
+ timestamp = {Wed, 12 Sep 2018 16:38:51 +0200},
+ title = {One billion word benchmark for measuring progress in statistical language
+modeling},
+ url = {http://www.isca-speech.org/archive/interspeech\_2014/i14\_2635.html},
+ year = {2014}
+}
+
 @inproceedings{DBLP:conf/interspeech/MikolovKBCK10,
  author = {Tomas Mikolov and
 Martin Karafi{\'{a}}t and
