--- a/db.bib
+++ b/db.bib
@@ -79,6 +79,19 @@ and Uszkoreit, Hans},
  year = {2000}
 }
 
+@inproceedings{akbik-blythe-vollgraf:2018:C18-1,
+ abstract = {Recent advances in language modeling using recurrent neural networks have made it viable to model language as distributions over characters. By learning to predict the next character on the basis of previous characters, such models have been shown to automatically internalize linguistic concepts such as words, sentences, subclauses and even sentiment. In this paper, we propose to leverage the internal states of a trained character language model to produce a novel type of word embedding which we refer to as contextual string embeddings. Our proposed embeddings have the distinct properties that they (a) are trained without any explicit notion of words and thus fundamentally model words as sequences of characters, and (b) are contextualized by their surrounding text, meaning that the same word will have different embeddings depending on its contextual use. We conduct a comparative evaluation against previous embeddings and find that our embeddings are highly useful for downstream tasks: across four classic sequence labeling tasks we consistently outperform the previous state-of-the-art. In particular, we significantly outperform previous work on English and German named entity recognition (NER), allowing us to report new state-of-the-art F1-scores on the CoNLL03 shared task.},
+ address = {Santa Fe, New Mexico, USA},
+ author = {Akbik, Alan  and  Blythe, Duncan  and  Vollgraf, Roland},
+ booktitle = {Proceedings of the 27th International Conference on Computational Linguistics},
+ month = {August},
+ pages = {1638--1649},
+ publisher = {Association for Computational Linguistics},
+ title = {Contextual String Embeddings for Sequence Labeling},
+ url = {http://www.aclweb.org/anthology/C18-1139},
+ year = {2018}
+}
+
 @article{Ando:2005:FLP:1046920.1194905,
  acmid = {1194905},
  author = {Ando, Rie Kubota and Zhang, Tong},
