--- a/db.bib
+++ b/db.bib
@@ -3725,6 +3725,22 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {2017}
 }
 
+@inproceedings{Vogel:1996:HWA:993268.993313,
+ acmid = {993313},
+ address = {Stroudsburg, PA, USA},
+ author = {Vogel, Stephan and Ney, Hermann and Tillmann, Christoph},
+ booktitle = {Proceedings of the 16th Conference on Computational Linguistics - Volume 2},
+ doi = {10.3115/993268.993313},
+ location = {Copenhagen, Denmark},
+ numpages = {6},
+ pages = {836--841},
+ publisher = {Association for Computational Linguistics},
+ series = {COLING '96},
+ title = {HMM-based Word Alignment in Statistical Translation},
+ url = {https://doi.org/10.3115/993268.993313},
+ year = {1996}
+}
+
 @book{wals,
  address = {Leipzig},
  editor = {Matthew S. Dryer and Martin Haspelmath},
