--- a/tinydb.bib
+++ b/tinydb.bib
@@ -272,6 +272,24 @@ languages.},
  year = {1992}
 }
 
+@article{Brown:1993:MSM:972470.972474,
+ acmid = {972474},
+ address = {Cambridge, MA, USA},
+ author = {Brown, Peter F. and Pietra, Vincent J. Della and Pietra, Stephen A. Della and Mercer, Robert L.},
+ issn = {0891-2017},
+ issue_date = {June 1993},
+ journal = {Comput. Linguist.},
+ month = {jun},
+ number = {2},
+ numpages = {49},
+ pages = {263--311},
+ publisher = {MIT Press},
+ title = {The Mathematics of Statistical Machine Translation: Parameter Estimation},
+ url = {http://dl.acm.org/citation.cfm?id=972470.972474},
+ volume = {19},
+ year = {1993}
+}
+
 @inproceedings{Bucilua:2006:MC:1150402.1150464,
  acmid = {1150464},
  author = {Bucilu\v{a}, Cristian and Caruana, Rich and Niculescu-Mizil, Alexandru},
