--- a/db.bib
+++ b/db.bib
@@ -2650,6 +2650,17 @@ and Zettlemoyer, Luke},
  year = {2002}
 }
 
+@incollection{NIPS2003_2397,
+ author = {Taskar, Ben and Guestrin, Carlos and Daphne Koller},
+ booktitle = {Advances in Neural Information Processing Systems 16},
+ editor = {S. Thrun and L. K. Saul and B. Sch\"{o}lkopf},
+ pages = {25--32},
+ publisher = {MIT Press},
+ title = {Max-Margin Markov Networks},
+ url = {http://papers.nips.cc/paper/2397-max-margin-markov-networks.pdf},
+ year = {2004}
+}
+
 @incollection{NIPS2005_427,
  address = {Cambridge, MA},
  author = {Sunita Sarawagi and William W. Cohen},
