--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2071,6 +2071,15 @@ and Zettlemoyer, Luke},
  year = {2002}
 }
 
+@incollection{NIPS2003_2397,
+ author = {Taskar, Ben and Guestrin, Carlos and Daphne Koller},
+ booktitle = {NIPS 16},
+ pages = {25--32},
+ title = {Max-Margin Markov Networks},
+ url = {http://papers.nips.cc/paper/2397-max-margin-markov-networks.pdf},
+ year = {2004}
+}
+
 @incollection{NIPS2005_427,
  author = {Sunita Sarawagi and William W. Cohen},
  booktitle = {NIPS 17},
