--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1459,6 +1459,24 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2008}
 }
 
+@article{hubel:monkey,
+ added-at = {2008-02-26T11:58:58.000+0100},
+ author = {Hubel, David H. and Wiesel, Torsten N.},
+ biburl = {https://www.bibsonomy.org/bibtex/2872c68e0af1147a61f7cfc6ce053bc0e/schaul},
+ citeulike-article-id = {2377229},
+ description = {idsia},
+ interhash = {2a99be38d4a543b3564fb56e8c094736},
+ intrahash = {872c68e0af1147a61f7cfc6ce053bc0e},
+ journal = {Journal of Physiology (London)},
+ keywords = {nn},
+ pages = {215--243},
+ priority = {2},
+ timestamp = {2008-02-26T12:04:32.000+0100},
+ title = {Receptive Fields and Functional Architecture of Monkey Striate Cortex},
+ volume = {195},
+ year = {1968}
+}
+
 @inproceedings{ICWSM101540,
  abstract = {We present TweetMotif, an exploratory search applica-  tion for Twitter. Unlike traditional approaches to in-  formation retrieval, which present a simple list of mes-  sages, TweetMotif groups messages by frequent signif-  icant terms — a result set’s subtopics — which facili-  tate navigation and drilldown through a faceted search  interface. The topic extraction system is based on syn-  tactic ﬁltering, language modeling, near-duplicate de-  tection, and set cover heuristics. We have used Tweet-  Motif to deﬂate rumors, uncover scams, summarize  sentiment, and track political protests in real-time. A  demo of TweetMotif, plus its source code, is available  at http://tweetmotif.com.},
  author = {Brendan O'Connor and Michel Krieger and David Ahn},
