--- a/db.bib
+++ b/db.bib
@@ -3337,6 +3337,18 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2005}
 }
 
+@inproceedings{schnabel-EtAl:2015:EMNLP,
+ address = {Lisbon, Portugal},
+ author = {Schnabel, Tobias  and  Labutov, Igor  and  Mimno, David  and  Joachims, Thorsten},
+ booktitle = {Proceedings of the 2015 Conference on Empirical Methods in Natural Language Processing},
+ month = {September},
+ pages = {298--307},
+ publisher = {Association for Computational Linguistics},
+ title = {Evaluation methods for unsupervised word embeddings},
+ url = {http://aclweb.org/anthology/D15-1036},
+ year = {2015}
+}
+
 @inproceedings{seeker-EtAl:2010:POSTERS,
  address = {Beijing, China},
  author = {Seeker, Wolfgang  and  Bohnet, Bernd  and  {\O}vrelid, Lilja  and  Kuhn, Jonas},
