--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2930,6 +2930,15 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2005}
 }
 
+@inproceedings{schnabel-EtAl:2015:EMNLP,
+ author = {Schnabel, Tobias  and  Labutov, Igor  and  Mimno, David  and  Joachims, Thorsten},
+ booktitle = {Proc. of EMNLP-2015},
+ publisher = {ACL},
+ title = {Evaluation methods for unsupervised word embeddings},
+ url = {http://aclweb.org/anthology/D15-1036},
+ year = {2015}
+}
+
 @inproceedings{seeker-EtAl:2010:POSTERS,
  author = {Seeker, Wolfgang  and  Bohnet, Bernd  and  {\O}vrelid, Lilja  and  Kuhn, Jonas},
  booktitle = {Coling 2010: Posters},
