--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2596,6 +2596,14 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2017}
 }
 
+@inproceedings{schnabel-EtAl:2015:EMNLP,
+ author = {Schnabel, Tobias  and  Labutov, Igor  and  Mimno, David  and  Joachims, Thorsten},
+ booktitle = {Proc. of EMNLP},
+ title = {Evaluation methods for unsupervised word embeddings},
+ url = {http://aclweb.org/anthology/D15-1036},
+ year = {2015}
+}
+
 @inproceedings{schneider-EtAl:2013:LAW7-ID,
  author = {Schneider, Nathan  and  O'Connor, Brendan  and  Saphra, Naomi  and  Bamman, David  and  Faruqui, Manaal  and  Smith, Noah A.  and  Dyer, Chris  and  Baldridge, Jason},
  booktitle = {Proc. of the 7th Linguistic Annotation Workshop and Interoperability with Discourse},
