--- a/db.bib
+++ b/db.bib
@@ -2177,6 +2177,18 @@ of graph-to-sequence conversions.},
  year = {2018}
 }
 
+@inproceedings{lei-EtAl:2014:P14-1,
+ address = {Baltimore, Maryland},
+ author = {Lei, Tao  and  Xin, Yu  and  Zhang, Yuan  and  Barzilay, Regina  and  Jaakkola, Tommi},
+ booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ month = {June},
+ pages = {1381--1391},
+ publisher = {Association for Computational Linguistics},
+ title = {Low-Rank Tensors for Scoring Dependency Structures},
+ url = {http://www.aclweb.org/anthology/P14-1130},
+ year = {2014}
+}
+
 @inproceedings{li-zhang-chen:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
