--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1903,6 +1903,15 @@ of graph-to-sequence conversions.},
  year = {2018}
 }
 
+@inproceedings{lei-EtAl:2014:P14-1,
+ author = {Lei, Tao  and  Xin, Yu  and  Zhang, Yuan  and  Barzilay, Regina  and  Jaakkola, Tommi},
+ booktitle = {Proc. of ACL-2014},
+ publisher = {ACL},
+ title = {Low-Rank Tensors for Scoring Dependency Structures},
+ url = {http://www.aclweb.org/anthology/P14-1130},
+ year = {2014}
+}
+
 @inproceedings{li-zhang-chen:2014:P14-1,
  author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
  booktitle = {Proc. of ACL-2014},
