--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1699,6 +1699,14 @@ of graph-to-sequence conversions.},
  year = {2018}
 }
 
+@inproceedings{lei-EtAl:2014:P14-1,
+ author = {Lei, Tao  and  Xin, Yu  and  Zhang, Yuan  and  Barzilay, Regina  and  Jaakkola, Tommi},
+ booktitle = {Proc. of ACL},
+ title = {Low-Rank Tensors for Scoring Dependency Structures},
+ url = {http://www.aclweb.org/anthology/P14-1130},
+ year = {2014}
+}
+
 @inproceedings{li-EtAl:2016:EMNLP20162,
  author = {Li, Jiwei  and  Monroe, Will  and  Ritter, Alan  and  Jurafsky, Dan  and  Galley, Michel  and  Gao, Jianfeng},
  booktitle = {Proc. of EMNLP},
