--- a/db.bib
+++ b/db.bib
@@ -2189,6 +2189,18 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{lei-EtAl:2015:NAACL-HLT,
+ address = {Denver, Colorado},
+ author = {Lei, Tao  and  Zhang, Yuan  and  M\`{a}rquez, Llu\'{i}s  and  Moschitti, Alessandro  and  Barzilay, Regina},
+ booktitle = {Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+ month = {May--June},
+ pages = {1150--1160},
+ publisher = {Association for Computational Linguistics},
+ title = {High-Order Low-Rank Tensors for Semantic Role Labeling},
+ url = {http://www.aclweb.org/anthology/N15-1121},
+ year = {2015}
+}
+
 @inproceedings{li-zhang-chen:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
