--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1707,6 +1707,14 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{lei-EtAl:2015:NAACL-HLT,
+ author = {Lei, Tao  and  Zhang, Yuan  and  M\`{a}rquez, Llu\'{i}s  and  Moschitti, Alessandro  and  Barzilay, Regina},
+ booktitle = {Proc. of NAACL},
+ title = {High-Order Low-Rank Tensors for Semantic Role Labeling},
+ url = {http://www.aclweb.org/anthology/N15-1121},
+ year = {2015}
+}
+
 @inproceedings{li-EtAl:2016:EMNLP20162,
  author = {Li, Jiwei  and  Monroe, Will  and  Ritter, Alan  and  Jurafsky, Dan  and  Galley, Michel  and  Gao, Jianfeng},
  booktitle = {Proc. of EMNLP},
