--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1912,6 +1912,15 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{lei-EtAl:2015:NAACL-HLT,
+ author = {Lei, Tao  and  Zhang, Yuan  and  M\`{a}rquez, Llu\'{i}s  and  Moschitti, Alessandro  and  Barzilay, Regina},
+ booktitle = {Proc. of NAACL-2015},
+ publisher = {ACL},
+ title = {High-Order Low-Rank Tensors for Semantic Role Labeling},
+ url = {http://www.aclweb.org/anthology/N15-1121},
+ year = {2015}
+}
+
 @inproceedings{li-zhang-chen:2014:P14-1,
  author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
  booktitle = {Proc. of ACL-2014},
