--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2881,6 +2881,14 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2016}
 }
 
+@inproceedings{tang-EtAl:2014:P14-1,
+ author = {Tang, Duyu  and  Wei, Furu  and  Yang, Nan  and  Zhou, Ming  and  Liu, Ting  and  Qin, Bing},
+ booktitle = {Proc. of ACL},
+ title = {Learning Sentiment-Specific Word Embedding for Twitter Sentiment Classification},
+ url = {http://www.aclweb.org/anthology/P14-1146},
+ year = {2014}
+}
+
 @inproceedings{taskar-simon-dan:2005:HLTEMNLP,
  author = {Taskar, Ben  and  Simon, Lacoste-Julien  and  Dan, Klein},
  booktitle = {Proc. of EMNLP},
