--- a/tinydb.bib
+++ b/tinydb.bib
@@ -34,6 +34,16 @@ and Clark, Peter E.},
  year = {2016}
 }
 
+@inproceedings{AAAI1612236,
+ abstract = {Cross-lingual model transfer has been a promising approach for inducing dependency parsers for low-resource languages where annotated treebanks are not available. The major obstacles for the model transfer approach are two-fold: 1. Lexical features are not directly transferable across languages; 2. Target language-specific syntactic structures are difficult to be recovered. To address these two challenges, we present a novel representation learning framework for multi-source transfer parsing. Our framework allows multi-source transfer parsing using full lexical features straightforwardly. By evaluating on the Google universal dependency treebanks (v2.0), our best models yield an absolute improvement of 6.53% in averaged labeled attachment score, as compared with delexicalized multi-source transfer models. We also significantly outperform the state-of-the-art transfer system proposed most recently.},
+ author = {Jiang Guo and Wanxiang Che and David Yarowsky and Haifeng Wang and Ting Liu},
+ conference = {AAAI Conference on Artificial Intelligence},
+ keywords = {Natural Language Processing; Representation Learning; Multilingual Learning; Dependency Parsing},
+ title = {A Representation Learning Framework for Multi-Source Transfer Parsing},
+ url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12236},
+ year = {2016}
+}
+
 @incollection{Agarwal2005,
  author = {Agarwal, Shivani and Roth, Dan},
  booktitle = {Learning Theory},
