--- a/tinydb.bib
+++ b/tinydb.bib
@@ -718,6 +718,22 @@ Yoshua Bengio},
  year = {2016}
 }
 
+@article{DBLP:journals/corr/BahdanauCB14,
+ archiveprefix = {arXiv},
+ author = {Dzmitry Bahdanau and
+Kyunghyun Cho and
+Yoshua Bengio},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/BahdanauCB14},
+ eprint = {1409.0473},
+ journal = {CoRR},
+ timestamp = {Mon, 13 Aug 2018 16:46:05 +0200},
+ title = {Neural Machine Translation by Jointly Learning to Align and Translate},
+ url = {http://arxiv.org/abs/1409.0473},
+ volume = {abs/1409.0473},
+ year = {2014}
+}
+
 @article{DBLP:journals/corr/BengioVJS15,
  author = {Samy Bengio and
 Oriol Vinyals and
