--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2726,6 +2726,14 @@ attachment score reported (to our knowledge) on the Chinese Treebank and the
  year = {2008}
 }
 
+@inproceedings{socher-EtAl:2013:ACL2013,
+ author = {Socher, Richard  and  Bauer, John  and  Manning, Christopher D.  and  Andrew Y., Ng},
+ booktitle = {Proc. of ACL},
+ title = {Parsing with Compositional Vector Grammars},
+ url = {http://www.aclweb.org/anthology/P13-1045},
+ year = {2013}
+}
+
 @inproceedings{song-EtAl:2012:POSTERS,
  author = {Song, Yan  and  Klassen, Prescott  and  Xia, Fei  and  Kit, Chunyu},
  booktitle = {Proc. of COLING 2012: Posters},
