--- a/shortdb.bib
+++ b/shortdb.bib
@@ -743,6 +743,33 @@ Communication Association, Makuhari, Chiba, Japan, September 26-30, 2010},
  year = {2010}
 }
 
+@proceedings{DBLP:conf/trec/1999,
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/conf/trec/1999},
+ editor = {Ellen M. Voorhees and
+Donna K. Harman},
+ publisher = {National Institute of Standards and Technology {(NIST)}},
+ timestamp = {Tue, 07 Apr 2015 13:04:04 +0200},
+ title = {Proceedings of The Eighth Text REtrieval Conference, {TREC} 1999,
+Gaithersburg, Maryland, USA, November 17-19, 1999},
+ url = {http://trec.nist.gov/pubs/trec8/t8\_proceedings.html},
+ volume = {Special Publication 500-246},
+ year = {1999}
+}
+
+@inproceedings{DBLP:conf/trec/Voorhees99,
+ author = {Ellen M. Voorhees},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/conf/trec/Voorhees99},
+ booktitle = {Proc. of The Eighth Text REtrieval Conference, {TREC} 1999,
+Gaithersburg, Maryland, USA, November 17-19, 1999},
+ crossref = {DBLP:conf/trec/1999},
+ timestamp = {Tue, 07 Apr 2015 13:04:04 +0200},
+ title = {The {TREC-8} Question Answering Track Report},
+ url = {http://trec.nist.gov/pubs/trec8/papers/qa\_report.pdf},
+ year = {1999}
+}
+
 @inproceedings{DBLP:conf/uai/ZettlemoyerC05,
  author = {Luke S. Zettlemoyer and
 Michael Collins},
