--- a/shortdb.bib
+++ b/shortdb.bib
@@ -345,6 +345,15 @@ languages.},
  year = {1991}
 }
 
+@inproceedings{bowman-EtAl:2015:EMNLP,
+ author = {Bowman, Samuel R.  and  Angeli, Gabor  and  Potts, Christopher  and  Manning, Christopher D.},
+ booktitle = {Proc. of EMNLP-2015},
+ publisher = {ACL},
+ title = {A large annotated corpus for learning natural language inference},
+ url = {http://aclweb.org/anthology/D15-1075},
+ year = {2015}
+}
+
 @article{Brown:1993:MSM:972470.972474,
  acmid = {972474},
  address = {Cambridge, MA, USA},
