--- a/db.bib
+++ b/db.bib
@@ -399,6 +399,18 @@ languages.},
  year = {1991}
 }
 
+@inproceedings{bowman-EtAl:2015:EMNLP,
+ address = {Lisbon, Portugal},
+ author = {Bowman, Samuel R.  and  Angeli, Gabor  and  Potts, Christopher  and  Manning, Christopher D.},
+ booktitle = {Proceedings of the 2015 Conference on Empirical Methods in Natural Language Processing},
+ month = {September},
+ pages = {632--642},
+ publisher = {Association for Computational Linguistics},
+ title = {A large annotated corpus for learning natural language inference},
+ url = {http://aclweb.org/anthology/D15-1075},
+ year = {2015}
+}
+
 @article{Brown:1993:MSM:972470.972474,
  acmid = {972474},
  address = {Cambridge, MA, USA},
