--- a/tinydb.bib
+++ b/tinydb.bib
@@ -265,6 +265,14 @@ languages.},
  year = {1991}
 }
 
+@inproceedings{bowman-EtAl:2015:EMNLP,
+ author = {Bowman, Samuel R.  and  Angeli, Gabor  and  Potts, Christopher  and  Manning, Christopher D.},
+ booktitle = {Proc. of EMNLP},
+ title = {A large annotated corpus for learning natural language inference},
+ url = {http://aclweb.org/anthology/D15-1075},
+ year = {2015}
+}
+
 @article{Brown:1992:CNG:176313.176316,
  acmid = {176316},
  address = {Cambridge, MA, USA},
