--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2903,6 +2903,15 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2015}
 }
 
+@inproceedings{rajpurkar-EtAl:2016:EMNLP2016,
+ author = {Rajpurkar, Pranav  and  Zhang, Jian  and  Lopyrev, Konstantin  and  Liang, Percy},
+ booktitle = {Proc. of EMNLP-2016},
+ publisher = {ACL},
+ title = {SQuAD: 100,000+ Questions for Machine Comprehension of Text},
+ url = {https://aclweb.org/anthology/D16-1264},
+ year = {2016}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  author = {Ratinov, Lev  and  Roth, Dan},
  booktitle = {CoNLL-2009},
