--- a/db.bib
+++ b/db.bib
@@ -3295,6 +3295,18 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2015}
 }
 
+@inproceedings{rajpurkar-EtAl:2016:EMNLP2016,
+ address = {Austin, Texas},
+ author = {Rajpurkar, Pranav  and  Zhang, Jian  and  Lopyrev, Konstantin  and  Liang, Percy},
+ booktitle = {Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing},
+ month = {November},
+ pages = {2383--2392},
+ publisher = {Association for Computational Linguistics},
+ title = {SQuAD: 100,000+ Questions for Machine Comprehension of Text},
+ url = {https://aclweb.org/anthology/D16-1264},
+ year = {2016}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  address = {Boulder, Colorado},
  author = {Ratinov, Lev  and  Roth, Dan},
